--- a/login.html
+++ b/login.html
@@ -1,164 +1,42 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <script src="script.js"></script>
     <meta charset="UTF-8">
     <title>Burgershot Login</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: system-ui, -apple-system, Segoe UI, sans-serif;
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            position: relative;
-            overflow: hidden;
-        }
-
-        /* Background */
-        body::before {
-            content: "";
-            position: fixed;
-            inset: 0;
-            background: url("assets/burgershot-bg.png") center/cover no-repeat;
-            filter: brightness(0.7);
-            z-index: -1;
-            animation: slowZoom 25s ease-in-out infinite alternate;
-        }
-
-        /* Login Box */
-        .login-box {
-            background: rgba(30, 32, 40, 0.7);
-            backdrop-filter: blur(15px);
-            padding: 50px 40px;
-            border-radius: 20px;
-            border: 1px solid rgba(255,255,255,0.1);
-            width: 320px;
-            text-align: center;
-            animation: fadeIn 0.8s ease;
-        }
-
-        .login-box h1 {
-            margin-bottom: 30px;
-            font-size: 20px;
-        }
-
-        input {
-            width: 100%;
-            padding: 12px;
-            margin-bottom: 15px;
-            border-radius: 10px;
-            border: none;
-            outline: none;
-            font-size: 14px;
-            background: rgba(255,255,255,0.1);
-            color: white;
-        }
-
-        input::placeholder {
-            color: #ccc;
-        }
-
-        button {
-            width: 100%;
-            padding: 10px;
-            border-radius: 999px;
-            border: none;
-            background: rgba(255,255,255,0.15);
-            color: white;
-            cursor: pointer;
-            transition: 0.2s ease;
-            font-size: 14px;
-        }
-
-        button:hover {
-            background: rgba(255,255,255,0.25);
-        }
-
-        .hint {
-            margin-top: 15px;
-            font-size: 12px;
-            color: #d1d5db;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(30px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
-        @keyframes slowZoom {
-            from { transform: scale(1.05); }
-            to { transform: scale(1.1); }
-        }
-
+        /* Beibehalten deines Stylings */
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        body { font-family: sans-serif; min-height: 100vh; display: flex; align-items: center; justify-content: center; color: white; overflow: hidden; }
+        body::before { content: ""; position: fixed; inset: 0; background: #1e2028; z-index: -1; } /* Fallback Farbe */
+        .login-box { background: rgba(30, 32, 40, 0.8); backdrop-filter: blur(15px); padding: 50px; border-radius: 20px; border: 1px solid rgba(255,255,255,0.1); width: 350px; text-align: center; }
+        input { width: 100%; padding: 12px; margin-bottom: 15px; border-radius: 10px; border: none; background: rgba(255,255,255,0.1); color: white; }
+        button { width: 100%; padding: 10px; border-radius: 999px; border: none; background: #faac15; color: black; font-weight: bold; cursor: pointer; }
+        .hint { margin-top: 15px; font-size: 12px; color: #ccc; }
     </style>
-    <script src="script.js"></script> <script>
-function handleLogin() { // Umbenannt von login zu handleLogin
-    let username = document.getElementById("username").value.trim();
-    let password = document.getElementById("password").value.trim();
-
-    let accounts = getAccounts(); 
-
-    if (!accounts[username]) {
-        alert("Account existiert nicht.");
-        return;
-    }
-
-    if (accounts[username].password !== password) {
-        alert("Falsches Passwort.");
-        return;
-    }
-
-    sessionStorage.setItem("loggedInUser", username);
-    window.location.href = "index.html";
-}
-</script>
 </head>
 <body>
-
-<div class="login-box">
-    <h1>🍔 Burgershot Login</h1>
-
-    <input type="text" id="username" placeholder="Benutzername (z.B. Max)" required>
-    <input type="password" id="password" placeholder="4-stelliges Passwort" maxlength="4" required>
-
-    <button onclick="handleLogin()">Login</button>
-
-    <div class="hint">
-        Standard Passwort: 0000
+    <div class="login-box">
+        <h1>🍔 Burgershot Login</h1>
+        <input type="text" id="username" placeholder="Benutzername" required>
+        <input type="password" id="password" placeholder="Passwort" maxlength="4" required>
+        <button onclick="handleLogin()">Login</button>
+        <div class="hint">Standard Passwort: 0000</div>
     </div>
-</div>
 
-<script>
-function login() {
-    let username = document.getElementById("username").value.trim();
-    let password = document.getElementById("password").value.trim();
+    <script src="script.js"></script>
+    <script>
+        function handleLogin() {
+            const u = document.getElementById("username").value.trim();
+            const p = document.getElementById("password").value.trim();
+            const accs = getAccounts();
 
-    // Wir nutzen die Funktion aus der script.js, um konsistent zu bleiben
-    let accounts = getAccounts(); 
-
-    if (!accounts[username]) {
-        alert("Account existiert nicht.");
-        return;
-    }
-
-    // WICHTIG: .password hinzufügen, da accounts[username] ein Objekt {password, role} ist
-    if (accounts[username].password !== password) {
-        alert("Falsches Passwort.");
-        return;
-    }
-
-    sessionStorage.setItem("loggedInUser", username);
-    window.location.href = "index.html";
-}
-</script>
-
+            if (accs[u] && accs[u].password === p) {
+                sessionStorage.setItem("loggedInUser", u);
+                window.location.href = "index.html";
+            } else {
+                alert("Login fehlgeschlagen. Überprüfe Name und PIN.");
+            }
+        }
+    </script>
 </body>
 </html>
