--- a/login.html
+++ b/login.html
@@ -48,6 +48,14 @@
             <button onclick="handleLogin()">Einloggen</button>
         </div>
     </div>
+    <div style="height: 100vh; display: flex; align-items: center; justify-content: center;">
+    <div class="glass-card" style="width: 400px; text-align: center;">
+        <h1 style="color: var(--primary); margin-bottom: 20px;">🍔 BURGERSHOT</h1>
+        <input type="text" id="username" placeholder="Name" style="width:100%; margin-bottom:15px;">
+        <input type="password" id="password" placeholder="PIN" style="width:100%; margin-bottom:20px;">
+        <button class="btn-gold" style="width:100%;" onclick="handleLogin()">Login</button>
+    </div>
+</div>
 
     <script src="script.js"></script>
     <script>
